fix: Adjust positioning of elements in styles.css for better layout alignment

--- a/backend/src/static/report/pagina3/styles.css
+++ b/backend/src/static/report/pagina3/styles.css
@@ -277,7 +277,7 @@ body {
 /* 90,5% */
 .c-905-871c74d784ec {
   position: absolute;
-  left: 202.03px;
+  right: 103.97px;
   top: 118.93px;
   height: 15px;
   box-shadow: ;
@@ -324,7 +324,7 @@ body {
 /* 90,5% */
 .c-905-e8e631b0e074 {
   position: absolute;
-  left: 202.03px;
+  right: 103.97px;
   top: 95.05px;
   height: 15px;
   box-shadow: ;
@@ -371,7 +371,7 @@ body {
 /* 18,5% */
 .c-185-e4f372865cea {
   position: absolute;
-  left: 289.08px;
+  right: 34.06px;
   top: 71.81px;
   height: 15px;
   box-shadow: ;
@@ -418,7 +418,7 @@ body {
 /* 0.6951 */
 .c-06951-2c21c063a888 {
   position: absolute;
-  left: 285.08px;
+  right: 34.06px;
   top: 48.57px;
   height: 15px;
   box-shadow: ;
